<resources>
    <string name="paski">Kalkulator pasków rezystorowych</string>
    <string name="cyfr1">Pierwszy kolor</string>
    <string name="rez">Rezystancja</string>
    <string name="cyfr2">Drugi kolor</string>
    <string name="cyfr3">Trzeci kolor</string>
    <string name="cyfr4">Czwarty kolor</string>
    <string name="app_name">ElectronicBand</string>
    <string name="theory">Teoria</string>
    <string name="calculators">Kalkulatory</string>
    <string name="descriptions_resistor_calculator">REZYSTORY</string>
    <string name="logic_bram">Bramki \nlogiczne</string>
    <string name="prosty">PROSTY</string>
    <string name="asin">asin</string>
    <string name="acos">acos</string>
    <string name="atang">atang</string>
    <string name="pi">pi</string>
    <string name="tang">tang</string>
    <string name="cos">cos</string>
    <string name="sin">sin</string>
    <string name="hex">hex</string>
    <string name="minuss">-</string>
    <string name="plus">+</string>
    <string name="kropk">.</string>
    <string name="_0">0</string>
    <string name="bin">bin</string>
    <string name="sqrrt">P</string>
    <string name="_9">9</string>
    <string name="_8">8</string>
    <string name="_7">7</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="x">x</string>
    <string name="c">C</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="dziele">/</string>
    <string name="ce">CE</string>
    <string name="kalk">Kalkulatory</string>
    <string name="about_us">O aplikacji</string>
    <string name="elementy_elektroniczne">Elementy elektroniczne</string>
    <string name="uklady_scalone">Układy scalone</string>
    <string name="ogolne_pojecia">Ogólne pojęcia</string>
    <string name="warsztat">Warsztat</string>
    <string name="edytor_schemat_w">Edytor schematów</string>
    <string name="AND"><u>Bramka AND</u></string>
    <string name="OR"><u>Bramka OR</u></string>
    <string name="NOR"><u>Bramka NOR</u></string>
    <string name="XOR"><u>Bramka XOR</u></string>
    <string name="NOT"><u>Bramka NOT</u></string>
    <string name="NAND"><u>Bramka NAND</u></string>
    <string-array name="more_array">
        <item>sinus</item>
        <item>cosinus</item>
        <item>tangens</item>
        <item>do radianów</item>
        <item>potęga</item>
        <item>logarytm naturalny</item>
        <item>logarytm dziesiętny</item>

    </string-array>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="courses">courses</string>
    <string name="kurs_arduino1">http://forbot.pl/blog/artykuly/programowanie/kurs-arduino-0-zapowiedz-cyklu-id5290</string>
    <string name="kurs_arduino2">http://forbot.pl/blog/artykuly/programowanie/kurs-arduino-ii-1-wstep-spis-tresci-id15494</string>
    <string name="kurs_robotow">http://forbot.pl/blog/artykuly/roboty/kurs-budowy-robotow-1-wstep-spis-tresci-id18935</string>
    <string name="kurs_edison">http://forbot.pl/blog/artykuly/programowanie/kurs-intel-edison-1-spis-tresci-id11185</string>
    <string name="kurs_elektroniki1">http://forbot.pl/blog/artykuly/podstawy/podstawy-elektroniki-1-napiecie-prad-opor-zasilanie-id3947</string>
    <string name="kurs_elektroniki2">http://forbot.pl/blog/artykuly/elektronika/kurs-elektroniki-ii-1-spis-tresci-id10746</string>
    <string name="kurs_stmf4">http://forbot.pl/blog/artykuly/programowanie/kurs-stm32-f4-1-czas-poznac-hal-spis-tresci-kursu-id14114</string>
    <string name="kurs_stm32">http://forbot.pl/blog/artykuly/programowanie/stm32-praktyce-1-platforma-srodowisko-id2733</string>
    <string name="kurs_lutowania">http://forbot.pl/blog/artykuly/podstawy/kurs-lutowania-1-wstep-spis-tresci-id12556</string>
    <string name="kurs_eagle">http://forbot.pl/blog/artykuly/podstawy/cadsoft-eagle-czesc-1-schematy-id1468</string>
    <string name="kurs_cyfrowki">http://forbot.pl/blog/artykuly/elektronika/technika-cyfrowa-1-wstep-spis-tresci-id18070</string>
    <string name="resistor">Rezystancję w obwodzie elektronicznym oznacza się symbolem R. Czasami obok
        symbolu może znajdować się dodatkowy napis w indeksie dolnym, określający, o którego
        elementu rezystancję chodzi, np. Rż może oznaczać rezystancję żarówki w obwodzie.
        Jednostką rezystancji jest om, a jej symbolem jest grecka litera omega (Ω). Im większa
wartość omegi, tym wyższa rezystancja.
Om jest bardzo małą jednostką oporu elektrycznego i dlatego w większości przypadków
do określania rezystancji używa się bardzo dużych wartości, np. kiloomów (połączenie
wyrazów „kilo” i „om”), czyli tysiąc omów (symbol kΩ), i megaomów (połączenie
wyrazów „mega” i „om”), czyli milion omów (symbol MΩ). Podsumowując, 1 kΩ = 1000 Ω,
a 1MΩ = 1 000 000 Ω
Ze względu na swoją prostotę i wszechstronność rezystory należą do najpopularniejszych
elementów elektronicznych. Najczęściej używa się ich do ograniczania ilości prądu
przepływającego przez obwód, ale za ich pomocą można także kontrolować napięcie
dostarczane do wybranej części obwodu.
    </string>
    <string name="capacitor">
Kondensatory to bierne elementy służące do przechowywania energii elektrycznej
pochodzącej ze źródła napięcia prądu. Jeśli usunie się źródło napięcia
i odizoluje kondensator w taki sposób, aby nie znajdował się w zamkniętym obwodzie,
to będzie on przechowywał zgromadzoną energię elektryczną. Jeśli połączy się go z innymi
elementami elektronicznymi w zamkniętym obwodzie, to uwolni część lub całość swojej
energii. Kondensator jest zbudowany z dwóch metalowych płytek rozdzielonych izolatorem
(dielektrykiem).
    </string>
    <string name="coil">
        Cewka indukcyjna to bierny element elektroniczny zbudowany ze zwoju drutu nawiniętego na rdzeń, który może być powietrzny, żelazny albo ferrytowy (ferryt to kruchy materiał wytwarzany z żelaza). Rdzenie wykonane z materiałów żelaznych mogą zwiększać siłę pola magnetycznego
    indukowanego przez przepływający prąd nawet do kilkuset razy. Cewkom indukcyjnym
    nadaje się różne nazwy, w zależności od tego, w jakim celu są wykorzystywane, dlatego
    można spotkać takie określenia, jak: zwój, dławik, elektromagnes czy solenoid.
    </string>
    <string name="potentiometer_spin">
    Potencjometr obrotowy ma obrotową ścieżkę oporową i specjalną gałkę służącą
do nastawiania wartości rezystancji. Ten rodzaj potencjometru jest często
wykorzystywany do budowy urządzeń elektronicznych. W obudowie urządzenia wycina się otwór, w który wkłada się potencjometr w taki sposób, aby jego złącza
można było połączyć z obwodami wewnętrznymi, a gałka regulacyjna wystawała
na zewnątrz. Używa się ich powszechnie do regulacji głośności.
    </string>
    <string name="potentiometer_slide">
Potencjometr suwakowy ma podłużną ścieżkę oporową, po której porusza się
suwak ruchem prostoliniowym. Używane są w sprzęcie audio i niektórych
ściemniaczach światła.
    </string>
    <string name="potentiometer_tune_into">
        Potencjometr dostrojczy (nazywany też potencjometrem nastawnym) jest
mniejszy od poprzednio opisanych. Montuje się go na płytkach drukowanych
układów, a do nastawiania wartości oporu służy specjalny wkręt. Najczęściej używa
się go do dostrajania obwodów, np. aby ustawić poziom wrażliwości czujnika
światła, a nie do dowolnego ustawiania jakichś wartości (np. poziomu dźwięku)
w czasie działania obwodu.
    </string>
    <string name="resistor_permament">
        Rezystor stały stawia niezmienny, z góry ustalony opór elektryczny (nie ma w tym
nic zaskakującego, bo co innego mogłoby znaczyć słowo „stały”). Rzeczywista
rezystancja rezystora może się różnić (być wyższa lub niższa) od wartości znamionowej
o pewną wartość procentową, zwaną tolerancją rezystora. Jeśli więc kupisz rezystor
o rezystancji znamionowej 1000 Ω i tolerancji 5 procent, to jego rezystancja
rzeczywista może mieć dowolną wartość z przedziału od 950 do 1050 omów
(ponieważ 5 procent z 1000 wynosi 50). Taki rezystor należy traktować jako rezystor
1000 Ω z dokładnością do 5 procent.
    </string>
    <string name="resistor_floating">
        Rezystor zmienny często nazywany potencjometrem lub reostatem, pozwala
nastawiać siłę rezystancji od zera omów do fabrycznie określonej wartości
maksymalnej. Potencjometrów używa się wówczas, gdy trzeba zmieniać wartość
prądu lub napięcia dostarczanego do danej części lub danego obwodu. Wśród
urządzeń, w których użyty jest potencjometr, można wymienić ściemniacze
światła, układy zmiany natężenia dźwięku w sprzęcie grającym i drążki sterowe
w samolotach.
    </string>
    <string name="diode_semiconductor">
        Dioda półprzewodnikowa to urządzenie elektroniczne z dwoma wyprowadzeniami, które
w swojej budowie ma jedno złącze p-n. Symbol, jakim oznaczamy diody na schematach,
pokazany jest po lewej stronie. Działanie diod przypomina działanie zaworów zwrotnych,
tzn. po przyłożeniu napięcia pozwalają na przepływ prądu tylko w jednym kierunku.
Czasami właściwość tę nazywa się prostowaniem elektrycznym.
    </string>
    <string name="diode_LED">
        Diody elektroluminescencyjne (czyli w skrócie LED) są zaprojektowane tak,
aby emitowały duże ilości światła widzialnego. Poprzez odpowiedni dobór materiałów
półprzewodnikowych uzyskuje się diody świecące na czerwono, żółto i zielono. Są też
specjalne diody świecące na niebiesko, a nawet biało. Dwu- i trzykolorowe diody LED
składają się odpowiednio z dwóch lub trzech diod jednokolorowych.
    </string>
    <string name="transistor_npn">
        Tranzystory npn cienka warstwa półprzewodnika typu p jest umieszczona
między dwiema grubszymi warstwami półprzewodnika typu n. Każda z tych
trzech warstw ma własne wyprowadzenie. Symbol, jakim oznaczamy tranzystory
npn, pokazano po lewej stronie.
    </string>
    <string name="transistor_pnp">
        Tranzystory pnp cienka warstwa półprzewodnika typu n jest umieszczona
między dwiema grubszymi warstwami półprzewodnika typu p. Każda z tych
trzech warstw ma własne wyprowadzenie. Symbol, jakim oznaczamy tranzystory
pnp, pokazano po lewej stronie.
    </string>
    <string name="transistor_FET">
        Tranzystor polowy (FET — ang. field-effect transistor) składa się z kanału z półprzewodnika
typu n lub p, przez który może płynąć prąd; wzdłuż tego kanału (tylko na części jego
długości) umieszczona jest sterująca jego przewodzeniem elektroda wykonana z innego
materiału. Jedna strona kanału zwana jest źródłem, a druga drenem, natomiast elektroda
sterująca to tzw. bramka. Przykładając napięcie do bramki, można sterować przepływem
prądu od źródła do drenu. Źródło, bramka i dren mają własne wyprowadzenia. Niektóre
tranzystory polowe mają dodatkowe, czwarte wyprowadzenie, służące do podłączania
tranzystora do masy w podstawie montażowej obwodu (nie należy ich mylić
z dwubramkowymi tranzystorami MOSFET, które również mają cztery
wyprowadzenia).
    </string>
    <string name="switch_slide">
        Zamykanie i otwieranie obwodu odbywa się poprzez
przesuwanie specjalnego suwaka. Tego rodzaju przełączniki są często używane
np. w latarkach.
    </string>
    <string name="switch_twostabile">
Zamykanie i otwieranie obwodu odbywa się poprzez
ustawienie pozycji dźwigni. Czasami dodawane są oznaczenia Wł. (On) i Wył. (Off)
dla położeń odpowiednio włączającego i wyłączającego dźwigni.
    </string>
    <string name="switch_leaf">
        Zamknięcie obwodu odbywa się poprzez naciśnięcie
dźwigni lub przycisku, a jej zwolnienie powoduje powrót do stanu otwartego.
Tego typu przełączniki są używane np. w dzwonkach do drzwi.
    </string>
    <string name="kursy">Kursy</string>
    <string name="podaj_nazw_elementu">Podaj nazwę elementu:</string>
    <string name="podaj_warto_elementu">Podaj wartość elementu:</string>
    <string name="add">Dodaj</string>
    <string name="beta">BETA</string>
</resources>