<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.Activities.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/theoryView"
            style="@style/MainMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorTheory"
            android:drawableStart="@drawable/icon_theory"
            android:text="@string/theory" />

        <TextView
            android:id="@+id/calculatorsView"
            style="@style/MainMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorCalculators"
            android:drawableStart="@drawable/calculator"
            android:text="@string/calculators" />

        <TextView
            android:id="@+id/coursesView"
            style="@style/MainMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorCourses"
            android:drawableStart="@drawable/courses_icon"
            android:text="@string/kursy" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorBackgroundEditor">

            <TextView
                android:id="@+id/schemaEditorView"
                style="@style/MainMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:drawableStart="@drawable/schematic_icon"
                android:text="@string/edytor_schemat_w" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="5dp"
                android:text="@string/beta"
                android:textColor="@color/colorBetaField"
                android:textStyle="italic|bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/aboutUsView"
            style="@style/MainMenu"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/colorMainBackgroundAboutUs"
            android:drawableStart="@drawable/dictionary_icon"
            android:text="@string/about_us" />

    </LinearLayout>

</LinearLayout>