<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.TheoryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/electronics_elements"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:text="@string/elementy_elektroniczne"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/integrated_circuits"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:text="@string/uklady_scalone"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/basic_terms"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:text="@string/ogolne_pojecia"
            android:textAlignment="textStart" />

        <Button
            android:id="@+id/workshop"
            style="@style/button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_kalkulatorki"
            android:drawableStart="@mipmap/ic_launcher_round"
            android:text="@string/warsztat"
            android:textAlignment="textStart" />

    </LinearLayout>


</LinearLayout>
