<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/tlo_k"
    android:paddingLeft="10dp"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.Calcs.SimpleCalc.Prosty_Kalkulator">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp">

            <!-- Tu jest wynik -->

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="18sp"

                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <!-- Tu jest obliczenie -->

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="0dp" />

            <!-- Tu jest miejsce do wpisywania -->
            <TextView
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/black"
                android:textSize="26sp"
                />


            <!-- WIEEEEEEEERSZ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_1"
                    android:textColor="#000000"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/button2"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_2"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/button3"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_3"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/mnoz"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/x"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/kasujc"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />



            </LinearLayout>
            <!-- WIEEEEEEEERSZ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                >

                <Button
                    android:id="@+id/button4"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_4"
                    android:textSize="18sp" />


                <Button
                    android:id="@+id/button5"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_5"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/button6"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_6"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/dziel"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/dziele"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />

                <Button
                    android:id="@+id/kasujce"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/ce"
                    android:textAlignment="center"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- WIEEEEEEEERSZ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/button7"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_7"
                    android:textSize="18sp"
                    />


                <Button
                    android:id="@+id/button8"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_8"
                    android:textSize="18sp"
                    />

                <Button
                    android:id="@+id/button9"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_9"
                    android:textSize="18sp"
                    />


                <Button
                    android:id="@+id/sqrt"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:fontFamily="monospace"
                    android:onClick="onClick"
                    android:text="@string/sqrrt"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    />


                <Button
                    android:id="@+id/bin"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/bin"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />

            </LinearLayout>
            <!-- WIEEEEEEEERSZ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/zero"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/_0"
                    android:textSize="18sp"

                    />

                <Button
                    android:id="@+id/kropka"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/kropk"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/button10"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/plus"
                    android:textSize="18sp"
                    android:textStyle="bold" />


                <Button
                    android:id="@+id/button11"
                    android:layout_width="70dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/minuss"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/hexx"
                    android:layout_width="50dp"
                    android:layout_height="60dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="@string/hex"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textStyle="bold" />






            </LinearLayout>
            <!-- WIEEEEEEEERSZ -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp">

                <Button
                    android:id="@+id/more"
                    android:layout_width="335dp"
                    android:layout_height="40dp"
                    android:layout_marginRight="1dp"
                    android:layout_marginTop="1dp"
                    android:background="@color/buttons_color_calc"
                    android:onClick="onClick"
                    android:text="MORE"
                    android:textAlignment="center"
                    android:textSize="18sp" />



            </LinearLayout>




            <Button
                android:id="@+id/button12"
                android:layout_width="335dp"
                android:layout_height="60dp"
                android:layout_marginTop="1dp"
                android:background="@color/buttons_color_calc"
                android:onClick="onClick"
                android:text="="
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
