<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="pl.wat.wel.projekt.pumo.electronicband.Activities.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop30EditElements"
        android:text="@string/podaj_nazw_elementu"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/name_of_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart80EditElements"
        android:layout_marginTop="@dimen/marginTop10EditElements"
        android:ems="10" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop50EditElements"
        android:text="@string/podaj_warto_elementu"
        android:textSize="@dimen/textSize20EditElements" />

    <EditText
        android:id="@+id/value_of_element"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginStart80EditElements"
        android:layout_marginTop="@dimen/marginTop10EditElements"
        android:ems="10" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginTop50EditElements"
        android:onClick="addElements"
        android:text="@string/add" />

</LinearLayout>
